# clibdpa

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.py  build32.bat  build64.bat  buildEclipse.sh  buildMake.sh  clibdpaConfig.cmake.in
CdcDpaInterface/: CMakeLists.txt  CdcDpaInterface.cpp  CdcDpaInterface.h
Dpa/: CMakeLists.txt  DPA.h  Dpa30xRequest.cpp  Dpa30xRequest.h  DpaHandler.cpp  DpaHandler.h  DpaHandler2.cpp  DpaHandler2.h  DpaMessage.cpp  DpaMessage.h  DpaRaw.cpp  DpaRaw.h  DpaRequest.cpp  DpaRequest.h  DpaTask.cpp  DpaTask.h  DpaTransaction.h  DpaTransaction2.cpp  DpaTransaction2.h  DpaTransactionResult.cpp  DpaTransactionResult.h  DpaTransactionResult2.cpp  DpaTransactionResult2.h  DpaTransactionTask.cpp  DpaTransactionTask.h  DpaTransfer.cpp  DpaTransfer.h  DpaWrapper.h  PrfRaw.cpp  unexpected_command.cpp  unexpected_command.h  unexpected_packet_type.cpp  unexpected_packet_type.h  unexpected_peripheral.cpp  unexpected_peripheral.h
DpaDemo/: CMakeLists.txt  DpaLibraryDemo.cpp  DpaLibraryDemo.h
DpaExamples/: CMakeLists.txt  Example.cpp  RawExample.cpp
DpaExtension/: CMakeLists.txt  DpaRaw.cpp  DpaTask.cpp  DpaTask.h  DpaTransactionTask.cpp  DpaTransactionTask.h  PrfFrc.cpp  PrfFrc.h  PrfIo.cpp  PrfIo.h  PrfLeds.cpp  PrfLeds.h  PrfOs.cpp  PrfOs.h  PrfRaw.cpp  PrfRaw.h  PrfRawHdp.cpp  PrfRawHdp.h  PrfThermometer.cpp  PrfThermometer.h
IqrfCdcChannel/: IqrfCdcChannel.cpp  IqrfCdcChannel.h
IqrfSpiChannel/: IqrfSpiChannel.cpp  IqrfSpiChannel.h
IqrfTracer/: CMakeLists.txt  IqrfTracer.cpp
SpiDpaInterface/: CMakeLists.txt  SpiDpaInterface.cpp  SpiDpaInterface.h
dpa/: CMakeLists.txt
dpa_demo/: CMakeLists.txt
include/: CMakeLists.txt  DPA.h  DpaMessage.h  DpaWrapper.h  IChannel.h  IDpaHandler2.h  IDpaTransaction2.h  IDpaTransactionResult2.h  IqrfTrace.h  IqrfTraceHex.h  TaskQueue.h
lib/: Readme.md
src/: CMakeLists.txt
src/DpaInterfaces/: CMakeLists.txt
src/DpaInterfaces/CdcDpaInterface/: CMakeLists.txt  CdcDpaInterface.cpp  CdcDpaInterfaceImpl.cpp  CdcDpaInterfaceImpl.h
src/DpaInterfaces/CdcDpaInterface/cdc/: CDCMessageParser.h  CDCMessageParserException.h  CDCTypes.h
src/DpaInterfaces/CdcDpaInterface/include/: CdcDpaInterface.h
src/DpaInterfaces/SpiDpaInterface/: CMakeLists.txt  SpiDpaInterface.cpp  SpiDpaInterfaceImpl.cpp  SpiDpaInterfaceImpl.h  SpiIqrf.cpp  SpiIqrf.h  SpiIqrfCommunicationStatus.cpp  SpiIqrfCommunicationStatus.h  spi_iqrf.h
src/DpaInterfaces/SpiDpaInterface/include/: DpaInterface.h  SpiDpaInterface.h
src/DpaLibrary/: CMakeLists.txt  DpaHandler.cpp  DpaInterface.cpp  DpaMessage.cpp  DpaRequest.cpp  unexpected_command.cpp  unexpected_packet_type.cpp  unexpected_peripheral.cpp
src/DpaLibrary/include/: CdcDpaInterface.h  DPA.h  DpaHandler.h  DpaInterface.h  DpaMessage.h  DpaRequest.h  DpaTransaction.h  DpaWrapper.h  IDpaResponseHandler.h  SpiDpaInterface.h  unexpected_peripheral.h
src/DpaLibraryDemo/: CMakeLists.txt  CdcDpaInterface.cpp  CdcDpaInterface.h  DpaLibraryDemo.cpp  DpaLibraryDemo.h
src/DpaLibraryDemo/cdc/: CDCImpl.cpp  CDCImplException.cpp  CDCMessageParser.cpp  CDCMessageParserException.cpp  CDCReceiveException.cpp  CDCSendException.cpp  CMakeLists.txt
src/DpaLibraryDemo/cdc/include/cdc/: CDCImpl.h  CDCReceiveException.h  CDCSendException.h  CdcInterface.h
src/DpaLibraryDemo/include/: sysfs_gpio.h
src/DpaLibraryDemo/include/cdc/: CDCImplException.h
