project(DpaExtension)

set(DpaExtension_SRC_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/DpaTask.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/DpaTransactionTask.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/PrfRaw.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/PrfLeds.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/PrfThermometer.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/PrfFrc.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/PrfOs.cpp
)

set(DpaExtension_INC_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/DpaTask.h
	${CMAKE_CURRENT_SOURCE_DIR}/DpaTransactionTask.h
	${CMAKE_CURRENT_SOURCE_DIR}/PrfRaw.h
	${CMAKE_CURRENT_SOURCE_DIR}/PrfLeds.h
	${CMAKE_CURRENT_SOURCE_DIR}/PrfThermometer.h
	${CMAKE_CURRENT_SOURCE_DIR}/PrfFrc.h
	${CMAKE_CURRENT_SOURCE_DIR}/PrfOs.h
)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${CMAKE_SOURCE_DIR}/Dpa)

add_library(${PROJECT_NAME} STATIC ${DpaExtension_SRC_FILES} ${DpaExtension_INC_FILES})

#install(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_PREFIX}/sbin)
