project(DpaExtension)

set(DpaExtension_SRC_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/PrfLeds.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/PrfThermometer.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/PrfFrc.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/PrfOs.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/PrfIo.cpp
)

set(DpaExtension_INC_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/PrfLeds.h
	${CMAKE_CURRENT_SOURCE_DIR}/PrfThermometer.h
	${CMAKE_CURRENT_SOURCE_DIR}/PrfFrc.h
	${CMAKE_CURRENT_SOURCE_DIR}/PrfOs.h
	${CMAKE_CURRENT_SOURCE_DIR}/PrfIo.h
)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})

add_library(${PROJECT_NAME} STATIC ${DpaExtension_SRC_FILES} ${DpaExtension_INC_FILES})

#install(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_PREFIX}/sbin)
